<resources>
    <string name="app_name">FreelanceAccounting</string>
    <string name="title_activity_home_menu">homeMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">FreelanceAccounting</string>
    <string name="menu_bank">Banque</string>
    <string name="menu_business">Entreprises</string>
    <string name="menu_charge">Charges</string>
    <string name="menu_client">Clients</string>
    <string name="menu_currency">Devises</string>
    <string name="menu_service">Services</string>
    <string name="title_activity_home_application">homeApplication</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>